dark mode fixes

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -5574,20 +5574,6 @@ div#driver-page-overlay {
 .flexer-sso-input{
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  padding: 0.4375rem 0.75rem;
-  font-size: .875rem;
-  font-weight: 400;
-  line-height: 1.4285714;
-  color: #232e3c;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #dadcde;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border-radius: 4px;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
   p{
     margin-bottom: 0 !important;
   }
